<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="40"
    tools:context="com.example.bmicalculator.MainActivity" >

    <TextView
        android:id="@+id/weightTextView"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/weightTextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/weighteditText"
        android:layout_width="151dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:ems="10"
        android:inputType="number|numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/heightTextView"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="19"
        android:text="@string/heightTextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="146dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="19"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <RadioGroup
        android:id="@+id/unitRadioGroup"
        android:layout_width="170dp"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="20" >

        <RadioButton
            android:id="@+id/englishRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/englishRadioButton" />

        <RadioButton
            android:id="@+id/metricRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metricRadioButton" />
    </RadioGroup>

    <Button
        android:id="@+id/bmiButton"
        android:layout_width="125dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="24"
        android:text="@string/bmiButton" />

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="29"
        android:text="@string/bmitextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/calcBmiTextView"
        android:layout_width="138dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="29"
        android:background="@android:color/holo_blue_light"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/valueBmiTextView"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="38"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</GridLayout>
